erDiagram
  AUTH_USERS {
    uuid id PK
    text email
  }

  USERS {
    uuid id PK
    text name
    text gender
    text bio
    text[] image_urls
    text current_app_mode
    int daily_like_limit
    int likes_used_today
    date last_like_date
    timestamptz created_at
  }

  SEEKER_PROFILES {
    uuid id PK
    uuid user_id FK
    int target_price_min
    int target_price_max
    date desired_start_date
    date desired_end_date
    text preferred_gender
    text about_me
    text[] lifestyle_tags
    boolean is_active
    timestamptz created_at
  }

  PROPERTIES {
    uuid id PK
    uuid host_id FK
    text apartment_name
    text address
    text description
    text[] image_urls
    int original_rent_price
    int sublet_price
    int avg_utility_fee
    date available_start_date
    date available_end_date
    text preferred_gender
    text room_type
    boolean furnished
    text[] house_rules
    numeric latitude
    numeric longitude
    boolean is_active
    timestamptz created_at
  }

  SWIPES {
    uuid id PK
    uuid swiper_id FK
    text target_type
    uuid target_property_id FK
    uuid target_seeker_profile_id FK
    text action
    timestamptz created_at
  }

  MATCHES {
    uuid id PK
    uuid property_id FK
    uuid seeker_user_id FK
    timestamptz created_at
  }

  MESSAGES {
    uuid id PK
    uuid match_id FK
    uuid sender_id FK
    text content
    timestamptz created_at
  }

  AUTH_USERS ||--|| USERS : "profile"
  USERS ||--o| SEEKER_PROFILES : "has"
  USERS ||--o{ PROPERTIES : "hosts"
  USERS ||--o{ SWIPES : "creates"
  PROPERTIES ||--o{ SWIPES : "receives"
  SEEKER_PROFILES ||--o{ SWIPES : "receives"
  PROPERTIES ||--o{ MATCHES : "matched in"
  USERS ||--o{ MATCHES : "seeker side"
  MATCHES ||--o{ MESSAGES : "has"
  USERS ||--o{ MESSAGES : "sends"
